--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -427,10 +427,12 @@ AllowOverwrite		on
 </Global>
 ```
 
-创建日志路径：
+- 创建一个目录来存储 FTP 服务器的日志：
+
+若不创建，会提示 `proftpd[3435]: warning: handling possibly truncated configuration data at line 65 of '/usr/local/etc/proftpd.conf'`。
 
 ```sh
-# mkdir -p /var/log/proftpd
+# mkdir /var/log/proftpd
 ```
 
 >**技巧**
@@ -487,11 +489,7 @@ uid=1002(proftpd) gid=1002(proftpd) groups=1002(proftpd)
 
 ### 数据库相关
 
-- 创建一个目录来存储 FTP 服务器的日志：
 
-```sh
-# mkdir /var/log/proftpd
-```
 
 - 创建一个 MySQL 数据库和一个对创建的数据库具有完全访问权限的用户：
 
@@ -586,11 +584,8 @@ proftpd@localhost [proftpd]> select * from users;
 
 ```sh
 # service proftpd enable # 加入启动项
-
 # service proftpd start # 启动服务器
-
 # service proftpd stop # 停止服务
-
 # service proftpd restart # 重启服务
 ```
 
