--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -583,9 +583,9 @@ proftpd@localhost [proftpd]> select * from users;
 ### 服务操作
 
 ```sh
-# service proftpd enable # 加入启动项
-# service proftpd start # 启动服务器
-# service proftpd stop # 停止服务
+# service proftpd enable  # 加入启动
+# service proftpd start   # 启动服务
+# service proftpd stop    # 停止服务
 # service proftpd restart # 重启服务
 ```
 
@@ -603,56 +603,38 @@ quit
 221 Goodbye.
 ```
 
+---
+
 使用 `ftp` 命令可以快速连接到 FTP 服务器。
 
 用法：
 
 ```sh
-ftp [选项] [URL]
+ftp [选项] [IP 地址]
 ```
 
-选项：
-
-`-4` 强制使用 IPv4 协议连接
-
-`-6` 强制使用 IPv6 协议连接
-
-`-a` 使用匿名登录
-
-`-q` \[quittime] 在设定时间后连接失败则自动放弃连接
-
-`-r` \[wait] 每隔 `wait` 秒发送一次连接请求
-
-`-A` 强制使用主动模式
-
-`-d` 开启调试模式
-
-`-v` 开启啰嗦模式
-
-`-V` 关闭啰嗦模式
-
-#### 登录后的命令
+FTP 命令：
 
 ```sh
-account [passwd] 提交补充密码
+account [密码] 提交补充密码
 
-append [locol-file] [remote-file] 以 remote-file 为文件名向服务器上传本地文件 local-file
+append [本地文件] [远程文件] 以 本地文件 为文件名向服务器上传本地文件本地文件
 
-ascii 将FTP文件传送类型设置为 ASCII 模式
+ascii 将 FTP 文件传送类型设置为 ASCII 模式
 
 bell 在文件传送完后发出提示音
 
-bye 结束与服务器的会话
+dir/ls 显示该目录下的文件及文件夹
 
 cd 切换目录
 
-cdup 退回父目录
+cdup 返回父目录
 
 delete 删除文件
 
-dir 显示该目录下的文件及文件夹
-
 features 显示该服务器支持的功能
 
-get remote-fil 下载服务器上的 remote-file
+get 远程文件 下载服务器上的远程文件
+
+bye 结束与服务器的会话
 ```
