--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -332,9 +332,15 @@ root@localhost [pureftpd]> select * from users;
 
 - Pure-FTPd 日志在 `/var/log/messages`。
 
-## proftpd（基于 mysql）
+## ProFTPD（基于 MySQL）
 
-### 安装 proftpd
+>**技巧**
+>
+>ProFTPD 在 Windows 自带的 FTP 链接下不会乱码。
+
+
+
+### 安装 ProFTPD 
 
 > **注意**
 >
@@ -353,9 +359,13 @@ root@localhost [pureftpd]> select * from users;
 # cd /usr/ports/databases/proftpd-mod_sql_mysql/ && make install clean
 ```
 
-### 配置文件 `/usr/local/etc/proftpd.conf`
+### ProFTPD 配置文件 `/usr/local/etc/proftpd.conf`
 
-- 编辑配置文件 `/usr/local/etc/proftpd.conf` 如下
+- 编辑 ProFTPD 的配置文件 `/usr/local/etc/proftpd.conf` 如下
+
+>**技巧**
+>
+>示例文件参见 `/usr/local/etc/proftpd.conf.sample`。
 
 ```sh
 ServerName "Test Ftp Server"
@@ -429,15 +439,19 @@ AllowOverwrite		on
 
 - 创建一个目录来存储 FTP 服务器的日志：
 
-若不创建，会提示 `proftpd[3435]: warning: handling possibly truncated configuration data at line 65 of '/usr/local/etc/proftpd.conf'`。
 
 ```sh
 # mkdir /var/log/proftpd
 ```
 
+>**警告**
+>
+>若不 **主动** 创建（即使自动创建了也应主动再创建一次），会提示 `proftpd[3435]: warning: handling possibly truncated configuration data at line 65 of '/usr/local/etc/proftpd.conf'`。
+
+
 >**技巧**
 >
->有语法检查命令 `proftpd -t -d5`。
+>ProFTPD 配置文件 `/usr/local/etc/proftpd.conf` 有语法检查命令 `proftpd -t -d5`。
 
 我们在设置中指定服务器将在主动模式下在端口 21 上工作，在被动模式下在 50000-60000 范围内工作。这些端口应该在防火墙中打开。对于 PF，这是通过以下规则完成的：
 
@@ -451,13 +465,13 @@ pass in quick on $ext_if proto tcp from any to $ext_if port { 21, 50000:60000 }
 
 ```sh
 # adduser
-Username: proftpd
-Full name: FTP User
-Uid (Leave empty for default):
+Username: proftpd # 用户名
+Full name: FTP User # 用户全名
+Uid (Leave empty for default): 
 Login group [proftpd]:
 Login group is proftpd. Invite proftpd into other groups? []:
 Login class [default]:
-Shell (sh csh tcsh bash nologin) [sh]: nologin
+Shell (sh csh tcsh bash nologin) [sh]: nologin # 不允许登录系统
 Home directory [/home/proftpd]:
 Home directory permissions (Leave empty for default):
 Enable ZFS encryption? (yes/no) [no]:
@@ -480,16 +494,8 @@ Add another user? (yes/no) [no]:
 Goodbye!
 ```
 
-现在已经创建了自己的 proftpd 用户和组 ID。在添加 ftp 用户时，你将使用它。你可以通过以下方式确定 UID：
-
-```sh
-root@ykla:/home/ykla # id proftpd
-uid=1002(proftpd) gid=1002(proftpd) groups=1002(proftpd)
-```
 
 ### 数据库相关
-
-
 
 - 创建一个 MySQL 数据库和一个对创建的数据库具有完全访问权限的用户：
 
@@ -537,16 +543,31 @@ CREATE TABLE worklog (
    UNIQUE INDEX id (id)
 ) ENGINE=InnoDB CHARACTER SET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci ROW_FORMAT=DYNAMIC;
 INSERT INTO `proftpd`.`users` (`username`, `descr`, `password`, `uid`, `gid`, `homedir`, `shell`, `count`)
-VALUES ('test', 'Test user', SHA2('FTPpassword_here', 256), '2000', '2000', '/home/www/ftp', NULL, '0');
+VALUES ('test', 'Test user', SHA2('FTPpassword_here', 256), '1002', '1002', '/home/www/ftp', NULL, '0');
 ```
 
 创建了：
-- 用户名 `test`
-- 密码 `FTPpassword_here`
+- FTP 用户名 `test`
+- FTP 登录密码 `FTPpassword_here`
+- UID `1002`
+- GID `1002`
 
-测试数据库链接：
+>**警告**
+>
+>上面的 UID GID 必须与 proftpd 用户相同！否则只能读不能写！
+>
+>
+>你可以通过以下方式确定 proftpd 用户的 UID 和 GID：
+>
+>```sh
+>root@ykla:/home/ykla # id proftpd
+>uid=1002(proftpd) gid=1002(proftpd) groups=1002(proftpd)
+>```
 
-```sh
+
+- 测试数据库链接：
+
+```sql
 # mysql -u proftpd -p -h localhost proftpd
 
 proftpd@localhost [proftpd]> show data;
@@ -567,7 +588,7 @@ proftpd@localhost [proftpd]> select * from users;
 +----------+-----------+------------------------------------------------------------------+------+------+---------------+-------+-------+
 | username | descr     | password                                                         | uid  | gid  | homedir       | shell | count |
 +----------+-----------+------------------------------------------------------------------+------+------+---------------+-------+-------+
-| test     | Test user | d1d6930fda5f964acba51ec4c35d0ddb3b36d25bfef59f1120abd2e4f9f140d9 | 2000 | 2000 | /home/www/ftp | NULL  |     0 |
+| test     | Test user | d1d6930fda5f964acba51ec4c35d0ddb3b36d25bfef59f1120abd2e4f9f140d9 | 1002 | 1002 | /home/www/ftp | NULL  |     0 |
 +----------+-----------+------------------------------------------------------------------+------+------+---------------+-------+-------+
 1 row in set (0.00 sec)
 ```
@@ -612,6 +633,32 @@ quit
 ```sh
 ftp [选项] [IP 地址]
 ```
+
+实例:
+
+```batch
+PS C:\Users\ykla> ftp 192.168.179.150
+连接到 192.168.179.150。
+220 FTP Server ready
+200 UTF8 set to on
+用户(192.168.179.150:(none)): test
+331 Password required for test
+密码:
+
+230-Total logins: 10
+230 User test logged in
+ftp> ls
+200 PORT command successful
+150 Opening ASCII mode data connection for file list
+FreeBSD Journal 2015.11-12.pdf
+哲学史期末.pdf
+226 Transfer complete
+ftp: 收到 56 字节，用时 0.00秒 56.00千字节/秒。
+ftp> dis
+221 Goodbye.
+ftp>
+```
+---
 
 FTP 命令：
 
