--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -49,20 +49,25 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 BrokenClientsCompatibility yes
 
 # 被动连接响应的端口范围。
+
 PassivePortRange 30000 50000
 
 # 允许认证用户登录的最小 UID。
 # 例如，值为 100 会阻止所有 UID 小于 100 的用户登录。
 # 如果您希望 root 能够登录，请使用 0。
+
 MinUID 2000
 
 # 仅允许认证用户进行 FXP 传输。
+
 AllowUserFXP yes
 
 # 若不禁止或注释，日志会报错找不到 ftp 用户
+
 # AntiWarez                    yes
 
-# 用户主目录不存在的话，自动创建。
+# 用户主目录不存在的话，自动创建
+
 CreateHomeDir yes
 
 # MySQL 配置文件（参见 README.MySQL）
@@ -131,12 +136,12 @@ flush privileges;
 ##############################################
 
 
-# Optional : MySQL server name or IP. Don't define this for unix sockets.
+# MYSQLServer 数据库服务器地址
 
 MYSQLServer     127.0.0.1
 
 
-# Optional : MySQL port. Don't define this if a local unix socket is used.
+# MYSQLServer 数据库服务器端口
 
 MYSQLPort       3306
 
@@ -146,22 +151,22 @@ MYSQLPort       3306
 MYSQLSocket     /var/run/mysqld/mysqld.sock
 
 
-# Mandatory : user to bind the server as.
+# 数据库用户名
 
 MYSQLUser       pftp
 
 
-# Mandatory : user password. You must have a password.
+# 数据库密码
 
 MYSQLPassword   abc123
 
 
-# Mandatory : database to open.
+# 数据库名
 
 MYSQLDatabase   pureftpd
 
 
-# Mandatory : how passwords are stored
+# 加密方式（此处为明文）
 # Valid values are : "cleartext", "argon2", "scrypt", "crypt", and "any"
 
 MYSQLCrypt      cleartext
@@ -188,7 +193,7 @@ MYSQLGetPW      SELECT Password FROM users WHERE User='\L'
 MYSQLGetUID     SELECT Uid FROM users WHERE User='\L'
 
 
-# Optional : default UID - if set this overrides MYSQLGetUID
+# 默认 UID - if set this overrides MYSQLGetUID
 
 MYSQLDefaultUID 2000
 
@@ -198,7 +203,7 @@ MYSQLDefaultUID 2000
 MYSQLGetGID     SELECT Gid FROM users WHERE User='\L'
 
 
-# Optional : default GID - if set this overrides MYSQLGetGID
+# 默认 GID - if set this overrides MYSQLGetGID
 
 MYSQLDefaultGID 2000
 
@@ -354,7 +359,7 @@ root@localhost [pureftpd]> select * from users;
 
 或
 
-```
+```sh
 # cd /usr/ports/ftp/proftpd/ && make install clean
 # cd /usr/ports/databases/proftpd-mod_sql_mysql/ && make install clean
 ```
@@ -367,7 +372,7 @@ root@localhost [pureftpd]> select * from users;
 >
 >示例文件参见 `/usr/local/etc/proftpd.conf.sample`。
 
-```sh
+```ini
 ServerName "Test Ftp Server"
 ServerType standalone
 DefaultServer on
@@ -399,9 +404,12 @@ LoadModule mod_sql.c
 LoadModule mod_sql_mysql.c
 LoadModule mod_sql_passwd.c
 
+# 只允许访问自己的目录，去掉会访问 /
+
 DefaultRoot ~
 
-# Normally, we want files to be overwriteable.
+# 运行覆盖文件
+
 AllowOverwrite		on
 
 <Global>
@@ -614,7 +622,7 @@ proftpd@localhost [proftpd]> select * from users;
 
 简单示例：
 
-```sh
+```batch
 # telnet localhost 21
 Trying 127.0.0.1...
 Connected to localhost.
