--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -662,7 +662,7 @@ FreeBSD Journal 2015.11-12.pdf
 哲学史期末.pdf
 226 Transfer complete
 ftp: 收到 56 字节，用时 0.00秒 56.00千字节/秒。
-ftp> dis
+ftp> bye
 221 Goodbye.
 ftp>
 ```
