--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -279,6 +279,10 @@ VALUES ('test', 'test2', 2001, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', 
 >
 >写入表的 `Uid`、`Gid` 必须和上文 `pw useradd` 创建的用户一致。
 
+>**技巧**
+>
+>基本思路就是写入数据库的虚拟用户会继承 `pw useradd` 创建的用户的权限与 GID\UID，然后通过数据库中的用户来操作 FTP。下同。
+
 实际操作示例：
 
 ```sql
