--- a/di-13-zhang-freebsd-te-se/di-13.5-jie-bsd-init-guan-li-fu-wu.md
+++ b/di-13-zhang-freebsd-te-se/di-13.5-jie-bsd-init-guan-li-fu-wu.md
@@ -4,6 +4,10 @@
 
 FreeBSD 使用传统的 BSD init 管理系统服务。
 
+>**技巧**
+>
+>这些服务如果是长期在后台运行的：一般叫 `xxxd`。比如 `sshd`、`ntpd`，当中的 `d`，即代表 FreeBSD 的小恶魔标志“[daemon](https://www.freebsd.org/copyright/daemon/)”。在 Windows 下他们叫做“服务”（任务管理器中就可以看到）。
+
 - 启动服务：`# service xxx start`
 - 停止服务：`# service xxx stop`
 - 重启服务：`# service xxx restart`
