--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -622,6 +622,179 @@ proftpd@localhost [proftpd]> select * from users;
 # service proftpd restart # 重启服务
 ```
 
+## vsftpd
+
+vsftpd 即 Very Secure FTP Daemon（非常安全的 FTP 守护进程）。在 Linux 上比较流行。
+
+### 安装 vsftpd
+
+- 通过 pkg 安装
+
+```sh
+# pkg install vsftpd-ssl pam_pwdfile
+```
+
+| 名称            | 说明         |
+|:-----------------|:----------|
+| vsftpd-ssl      | 带 SSL 支持的 vsftpd-ssl        |
+| pam_pwdfile     | 一个 PAM 模块，允许使用纯文本密码文件进行用户身份验证。 |
+
+>**技巧**
+>
+>FreeBSD　系统中的 `/etc/passwd` 仅起到兼容作用，并不实际使用。实际使用的是相关 db 数据库文件。
+
+- 通过 Ports：
+
+```
+# cd /usr/ports/ftp/vsftpd/ && make install clean
+# cd /usr/ports/security/pam_pwdfile/ && make install clean
+```
+
+观察安装输出：
+
+```sh
+[2/2] Installing vsftpd-ssl-3.0.5_2...
+===> Creating groups
+Using existing group 'ftp'
+===> Creating users
+Creating user 'ftp' with uid '14'
+===> Creating homedir(s)
+[2/2] Extracting vsftpd-ssl-3.0.5_2: 100%
+```
+
+看到 vsftpd 会创建一个用户叫 `ftp`，查看该用户详情：
+
+```sh
+# id ftp
+uid=14(ftp) gid=14(ftp) groups=14(ftp)
+```
+
+###  配置 pam_pwdfile
+
+创建文件 `/etc/pam.d/vsftpd`，写入：
+
+
+```ini
+auth required /usr/local/lib/pam_pwdfile.so pwdfile /usr/local/etc/vsftpd_login.db
+account required /usr/lib/pam_permit.so
+```
+
+### 配置 `vsftpd.conf`
+
+vsftpd 主配置数据保存在 `/usr/local/etc/vsftpd.conf`，可直接修改。因为还有个备用的模板在 `/usr/local/etc/vsftpd.conf.sample`。
+
+我们将 `/usr/local/etc/vsftpd.conf` 配置如下：
+
+```ini
+# /usr/local/etc/vsftpd.conf 示例配置文件 
+#
+# 默认编译设置相当保守。此示例文件略微放宽了一些设置，使 FTP 守护进程更实用。
+# 参阅 vsftpd.conf.5 可获取所有默认编译设置。
+#
+# 请注意：此示例文件不是 vsftpd 选项的详尽列表。
+# 请阅读 vsftpd.conf.5 手册页，以全面了解 vsftpd 的功能。
+#
+# 不允许匿名 FTP 吗？
+anonymous_enable=NO
+#
+# 允许本地用户登录。
+local_enable=YES
+#
+# 取消注释以启用任何形式的 FTP 写命令。
+write_enable=YES
+#
+# 本地用户的默认 umask 值为 077。你可能希望将其更改为 022，
+# 如果你的用户期待这样的话（022 是大多数其他 FTP 服务的默认值）
+# local_umask=022
+#
+# 取消注释以允许匿名 FTP 用户上传文件。仅当启用了上面的全局写入功能时，才会生效。
+# 此外，你还需要为 FTP 用户创建一个可写的目录。
+# anon_upload_enable=YES
+#
+# 如果你希望匿名 FTP 用户能够创建新目录，取消注释此项。
+# anon_mkdir_write_enable=YES
+#
+# 启用目录消息 - 在远程用户进入某个目录时，给出相关的消息。
+dirmessage_enable=YES
+#
+# 启用上传/下载日志记录。
+xferlog_enable=YES
+#
+# 确保 PORT 传输连接来自端口 20 (ftp-data)。
+connect_from_port_20=YES
+#
+# 如果需要，你可以安排上传的匿名文件由不同的用户拥有。注意！不建议将上传文件归属于 "root" 用户！
+# chown_uploads=YES
+# chown_username=whoever
+#
+# 你可以覆盖日志文件的存放位置。默认路径如下。
+# xferlog_file=/var/log/vsftpd.log
+#
+# 如果需要，你可以使用标准 ftpd xferlog 格式的日志文件。
+# 注意，在这种情况下，默认的日志文件位置为 /var/log/xferlog。
+# xferlog_std_format=YES
+#
+# 你可以更改超时闲置会话的默认值。
+# idle_session_timeout=600
+#
+# 你可以更改超时数据连接的默认值。
+# data_connection_timeout=120
+#
+# 建议你在系统上定义一个唯一的用户，供 FTP 服务器使用，作为完全隔离且没有特权的用户。
+# nopriv_user=ftpsecure
+#
+# 启用此选项，服务器将识别异步 ABOR 请求。由于代码较为复杂，安全性方面不推荐启用此项。
+# 如果不启用，某些旧的 FTP 客户端可能会遇到问题。
+# async_abor_enable=YES
+#
+# 在默认情况下，服务器会假装允许 ASCII 模式，但实际上会忽略该请求。
+# 打开以下选项，服务器将在 ASCII 模式下对文件进行 ASCII 格式的修改。
+# 注意：在某些 FTP 服务器中，ASCII 支持允许通过 "SIZE /big/file" 命令在 ASCII 模式下发起拒绝服务攻击（DoS）。vsftpd 已经预测到此攻击并始终保持安全，报告的是原始文件的大小。
+# ASCII 格式修改是该协议的一项糟糕特性。
+# ascii_upload_enable=YES
+# ascii_download_enable=YES
+#
+# 你可以完全自定义登录横幅信息：
+ftpd_banner=Welcome to blah FTP service.
+#
+# 你可以指定一个禁止匿名电子邮件地址的文件。此功能对于防范某些 DoS 攻击可能很有用。
+# deny_email_enable=YES
+# (默认值如下)
+# banned_email_file=/etc/vsftpd.banned_emails
+#
+# 你可以指定一个本地用户的显式列表，将这些用户 chroot() 到他们的主目录。如果 chroot_local_user 为 YES，
+# 则此列表变为不进行 chroot() 操作的用户列表。
+# (警告！chroot() 可能非常危险。如果使用 chroot，请确保用户对 chroot 目录的顶级目录没有写权限)
+chroot_local_user=YES
+chroot_list_enable=YES
+# (默认值如下)
+# chroot_list_file=/etc/vsftpd.chroot_list
+#
+# 你可以启用内置 ls 的 "-R" 选项。默认情况下禁用此选项，以避免远程用户在大站点上引起过多 I/O。
+# 然而，一些有缺陷的 FTP 客户端（如 "ncftp" 和 "mirror"）假设存在 "-R" 选项，因此启用它有一定的理由。
+# ls_recurse_enable=YES
+#
+# 当启用 "listen" 指令时，vsftpd 以独立模式运行，并监听 IPv4 套接字。此指令不能与 listen_ipv6 指令同时使用。
+listen=YES
+#
+# 此指令启用监听 IPv6 套接字。如果要同时监听 IPv4 和 IPv6 套接字，则必须使用两个不同的配置文件运行两个 vsftpd 实例。
+# 确保其中一个 listen 选项被注释掉！！
+# listen_ipv6=YES
+
+# 此选项应该是一个空目录的路径。
+# 此目录不应可写给 FTP 用户。该目录在 vsftpd 不需要文件系统访问时用作安全的 chroot() 监狱。
+secure_chroot_dir=/usr/local/share/vsftpd/empty
+
+# 如果启用后台模式，此选项才有效。
+# 它会将运行中的守护进程的 PID 写入指定路径的文件中。
+# 默认情况下不创建 PID 文件。
+# pid_file=/var/run/vsftpd.pid
+
+# 如果在独立模式下使用 vsftpd，请取消注释下面两行：
+listen=YES
+background=YES
+```
+
 ## 连接到 FTP 服务器
 
 简单示例：
