--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -622,6 +622,8 @@ proftpd@localhost [proftpd]> select * from users;
 # service proftpd restart # 重启服务
 ```
 
+使用用户 `test`，密码 `FTPpassword_here` 登录 FTP 即可。
+
 ## vsftpd
 
 vsftpd 即 Very Secure FTP Daemon（非常安全的 FTP 守护进程）。在 Linux 上比较流行。
@@ -631,13 +633,14 @@ vsftpd 即 Very Secure FTP Daemon（非常安全的 FTP 守护进程）。在 Li
 - 通过 pkg 安装
 
 ```sh
-# pkg install vsftpd-ssl pam_pwdfile
+# pkg install vsftpd-ssl pam_pwdfile apache24
 ```
 
 | 名称            | 说明         |
 |:-----------------|:----------|
 | vsftpd-ssl      | 带 SSL 支持的 vsftpd-ssl        |
 | pam_pwdfile     | 一个 PAM 模块，允许使用纯文本密码文件进行用户身份验证。 |
+|apache24|提供了 `htpasswd` 命令 |
 
 >**技巧**
 >
@@ -648,6 +651,7 @@ vsftpd 即 Very Secure FTP Daemon（非常安全的 FTP 守护进程）。在 Li
 ```
 # cd /usr/ports/ftp/vsftpd/ && make install clean
 # cd /usr/ports/security/pam_pwdfile/ && make install clean
+# cd /usr/ports/www/apache24 && make install clean
 ```
 
 观察安装输出：
@@ -669,15 +673,74 @@ Creating user 'ftp' with uid '14'
 uid=14(ftp) gid=14(ftp) groups=14(ftp)
 ```
 
+### 创建虚拟用户
+
+```sh
+root@ykla:/home/ykla # adduser
+Username: ftptest
+Full name:
+Uid (Leave empty for default):
+Login group [ftptest]: ftp # 注意此处
+Login group is ftp. Invite ftptest into other groups? []:
+Login class [default]:
+Shell (sh csh tcsh nologin) [sh]: nologin # 注意此处
+Home directory [/home/ftptest]:
+Home directory permissions (Leave empty for default):
+Enable ZFS encryption? (yes/no) [no]:
+Use password-based authentication? [yes]:
+Use an empty password? (yes/no) [no]:
+Use a random password? (yes/no) [no]:
+Enter password: # 注意此处，我设置密码为 z
+Enter password again:
+Lock out the account after creation? [no]:
+Username    : ftptest
+Password    : *****
+Full Name   :
+Uid         : 1003
+ZFS dataset : zroot/home/ftptest
+Class       :
+Groups      : ftp
+Home        : /home/ftptest
+Home Mode   :
+Shell       : /usr/sbin/nologin
+Locked      : no
+OK? (yes/no) [yes]:
+adduser: INFO: Successfully created ZFS dataset (zroot/home/ftptest).
+adduser: INFO: Successfully added (ftptest) to the user database.
+Add another user? (yes/no) [no]:
+Goodbye!
+```
+
+以上：
+
+- 用户名 `ftptest`
+- 密码 `z`
+- 组 `ftp`
+
 ###  配置 pam_pwdfile
 
-创建文件 `/etc/pam.d/vsftpd`，写入：
+- 创建文件 `/etc/pam.d/vsftpd`，写入：
 
 
 ```ini
 auth required /usr/local/lib/pam_pwdfile.so pwdfile /usr/local/etc/vsftpd_login.db
 account required /usr/lib/pam_permit.so
 ```
+
+- 创建密码数据库（我上面添加了用户 `virtual`，密码是 `z` ）
+
+```sh
+# htpasswd -c -b /usr/local/etc/vsftpd_login.db virtual z
+Adding password for user virtual
+``
+
+后续再添加（可能需要再 `adduser`，未测试）：
+
+```sh
+# htpasswd -b /usr/local/etc/vsftpd_login.db 新建的用户名 新建的用户密码
+```
+
+- 创建并编辑`/usr/local/etc/vsftpd.chroot_list`，加入用户 `ftptest`
 
 ### 配置 `vsftpd.conf`
 
@@ -722,6 +785,9 @@ xferlog_enable=YES
 #
 # 确保 PORT 传输连接来自端口 20 (ftp-data)。
 connect_from_port_20=YES
+
+local_root=/home/ftp
+anon_root=/home/ftp
 #
 # 如果需要，你可以安排上传的匿名文件由不同的用户拥有。注意！不建议将上传文件归属于 "root" 用户！
 # chown_uploads=YES
@@ -734,11 +800,11 @@ connect_from_port_20=YES
 # 注意，在这种情况下，默认的日志文件位置为 /var/log/xferlog。
 # xferlog_std_format=YES
 #
-# 你可以更改超时闲置会话的默认值。
-# idle_session_timeout=600
+# 你可以更改超时闲置会话的默认值。单位秒，下同
+idle_session_timeout=1800
 #
 # 你可以更改超时数据连接的默认值。
-# data_connection_timeout=120
+data_connection_timeout=1200
 #
 # 建议你在系统上定义一个唯一的用户，供 FTP 服务器使用，作为完全隔离且没有特权的用户。
 # nopriv_user=ftpsecure
@@ -765,10 +831,12 @@ ftpd_banner=Welcome to blah FTP service.
 # 你可以指定一个本地用户的显式列表，将这些用户 chroot() 到他们的主目录。如果 chroot_local_user 为 YES，
 # 则此列表变为不进行 chroot() 操作的用户列表。
 # (警告！chroot() 可能非常危险。如果使用 chroot，请确保用户对 chroot 目录的顶级目录没有写权限)
-chroot_local_user=YES
+# chroot_local_user=NO 即 chroot_list_file 文件中用户将会被限制在其家目录中
+chroot_local_user=NO
 chroot_list_enable=YES
 # (默认值如下)
-# chroot_list_file=/etc/vsftpd.chroot_list
+chroot_list_file=/usr/local/etc/vsftpd.chroot_list
+allow_writeable_chroot=YES
 #
 # 你可以启用内置 ls 的 "-R" 选项。默认情况下禁用此选项，以避免远程用户在大站点上引起过多 I/O。
 # 然而，一些有缺陷的 FTP 客户端（如 "ncftp" 和 "mirror"）假设存在 "-R" 选项，因此启用它有一定的理由。
@@ -793,7 +861,29 @@ secure_chroot_dir=/usr/local/share/vsftpd/empty
 # 如果在独立模式下使用 vsftpd，请取消注释下面两行：
 listen=YES
 background=YES
+
+# 使用本地时间
+use_localtime=YES
 ```
+
+官网文档在此 [VSFTPD.CONF](https://security.appspot.com/vsftpd/vsftpd_conf.html)，中文翻译在金步国的 [vsftpd.conf 中文版](https://www.jinbuguo.com/vsftpd/vsftpd.conf.html)。
+
+### 服务管理
+
+```sh
+# service vsftpd enable  # 添加服务
+# service vsftpd start   # 开始服务
+# service vsftpd stop    # 停止服务
+# service vsftpd restart # 重启服务
+```
+
+- 使用用户 `ftptest`，密码 `z` 登录 FTP 即可。
+
+- vsftpd 日志在 `/var/log/vsftpd.log`
+
+### 参考文献
+
+- [How to set up vsftpd on FreeBSD 12?](https://www.osradar.com/how-to-set-up-vsftpd-on-freebsd-12/)，其修改自 [Installing and configuring vsftpd on FreeBSD](https://dnaeon.github.io/installing-and-configuring-vsftpd-on-freebsd/)。本文框架基于此。
 
 ## 连接到 FTP 服务器
 
@@ -819,30 +909,6 @@ quit
 ftp [选项] [IP 地址]
 ```
 
-实例:
-
-```batch
-PS C:\Users\ykla> ftp 192.168.179.150
-连接到 192.168.179.150。
-220 FTP Server ready
-200 UTF8 set to on
-用户(192.168.179.150:(none)): test
-331 Password required for test
-密码:
-
-230-Total logins: 10
-230 User test logged in
-ftp> ls
-200 PORT command successful
-150 Opening ASCII mode data connection for file list
-FreeBSD Journal 2015.11-12.pdf
-哲学史期末.pdf
-226 Transfer complete
-ftp: 收到 56 字节，用时 0.00秒 56.00千字节/秒。
-ftp> bye
-221 Goodbye.
-ftp>
-```
 ---
 
 FTP 命令：
@@ -869,4 +935,29 @@ features 显示该服务器支持的功能
 get 远程文件 下载服务器上的远程文件
 
 bye 结束与服务器的会话
+```
+
+实例:
+
+```batch
+PS C:\Users\ykla> ftp 192.168.179.150
+连接到 192.168.179.150。
+220 FTP Server ready
+200 UTF8 set to on
+用户(192.168.179.150:(none)): test
+331 Password required for test
+密码:
+
+230-Total logins: 10
+230 User test logged in
+ftp> ls
+200 PORT command successful
+150 Opening ASCII mode data connection for file list
+FreeBSD Journal 2015.11-12.pdf
+哲学史期末.pdf
+226 Transfer complete
+ftp: 收到 56 字节，用时 0.00秒 56.00千字节/秒。
+ftp> bye
+221 Goodbye.
+ftp>
 ```
