--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -727,10 +727,10 @@ auth required /usr/local/lib/pam_pwdfile.so pwdfile /usr/local/etc/vsftpd_login.
 account required /usr/lib/pam_permit.so
 ```
 
-- 创建密码数据库（我上面添加了用户 `virtual`，密码是 `z` ）
+- 创建密码数据库（我上面添加了用户 `ftptest`，密码是 `z` ）
 
 ```sh
-# htpasswd -c -b /usr/local/etc/vsftpd_login.db virtual z
+# htpasswd -c -b /usr/local/etc/vsftpd_login.db ftptest z
 Adding password for user virtual
 ```
 
@@ -740,7 +740,6 @@ Adding password for user virtual
 # htpasswd -b /usr/local/etc/vsftpd_login.db 新建的用户名 新建的用户密码
 ```
 
-- 创建并编辑`/usr/local/etc/vsftpd.chroot_list`，加入用户 `ftptest`
 
 ### 配置 `vsftpd.conf`
 
@@ -867,6 +866,19 @@ use_localtime=YES
 ```
 
 官网文档在此 [VSFTPD.CONF](https://security.appspot.com/vsftpd/vsftpd_conf.html)，中文翻译在金步国的 [vsftpd.conf 中文版](https://www.jinbuguo.com/vsftpd/vsftpd.conf.html)。
+
+### `vsftpd.chroot_list`
+
+创建并编辑`/usr/local/etc/vsftpd.chroot_list`，加入用户 `ftptest`
+
+
+### 创建路径
+
+```sh
+# mkdir -p /home/ftp
+# chown -R ftp:ftp /home/ftp
+# chmod -R 775 /home/ftp
+```
 
 ### 服务管理
 
