--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -928,17 +928,13 @@ FTP 命令：
 ```sh
 account [密码] 提交补充密码
 
-append [本地文件] [远程文件] 以 本地文件 为文件名向服务器上传本地文件本地文件
-
-ascii 将 FTP 文件传送类型设置为 ASCII 模式
+put 上传
 
 bell 在文件传送完后发出提示音
 
 dir/ls 显示该目录下的文件及文件夹
 
 cd 切换目录
-
-cdup 返回父目录
 
 delete 删除文件
 
@@ -951,25 +947,67 @@ bye 结束与服务器的会话
 
 实例:
 
-```batch
+```powershell
 PS C:\Users\ykla> ftp 192.168.179.150
 连接到 192.168.179.150。
-220 FTP Server ready
-200 UTF8 set to on
-用户(192.168.179.150:(none)): test
-331 Password required for test
+220 Welcome to blah FTP service.
+200 Always in UTF8 mode.
+用户(192.168.179.150:(none)): ftptest
+331 Please specify the password.
 密码:
 
-230-Total logins: 10
-230 User test logged in
+230 Login successful.
 ftp> ls
-200 PORT command successful
-150 Opening ASCII mode data connection for file list
-FreeBSD Journal 2015.11-12.pdf
-哲学史期末.pdf
-226 Transfer complete
-ftp: 收到 56 字节，用时 0.00秒 56.00千字节/秒。
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东方工作室译).pdf
+哲学史期末.docx
+马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 288 字节，用时 0.00秒 96.00千字节/秒。
+ftp> delete 哲学史期末.docx
+250 Delete operation successful.
+ftp> dir
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+-rw-------    1 1003     14       147170778 Mar 06 15:39 FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+-rw-------    1 1003     14       47037557 Mar 06 15:39 FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东 方工作室译).pdf
+-rw-------    1 1003     14         591146 Oct 20 11:28 马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 435 字节，用时 0.01秒 54.38千字节/秒。
+ftp> get 马克思主义哲学原理.doc
+200 PORT command successful. Consider using PASV.
+150 Opening BINARY mode data connection for 马克思主义哲学原理.doc (591146 bytes).
+226 Transfer complete.
+ftp: 收到 591146 字节，用时 0.01秒 42224.71千字节/秒。
+ftp> ls
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东方工作室译).pdf
+马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 266 字节，用时 0.00秒 66.50千字节/秒。
+ftp> lcd
+目前的本地目录 C:\Users\ykla。
+ftp> put UOS使用打印机.pdf
+200 PORT command successful. Consider using PASV.
+150 Ok to send data.
+226 Transfer complete.
+ftp: 发送 1269989 字节，用时 0.04秒 36285.40千字节/秒。
+ftp> dir
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+-rw-------    1 1003     14       147170778 Mar 06 15:39 FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+-rw-------    1 1003     14       47037557 Mar 06 15:39 FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东 方工作室译).pdf
+-rw-------    1 1003     14        1269989 Mar 27 15:13 UOS使用打印机.pdf
+-rw-------    1 1003     14         591146 Oct 20 11:28 马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 515 字节，用时 0.01秒 46.82千字节/秒。
 ftp> bye
 221 Goodbye.
-ftp>
+PS C:\Users\ykla>
 ```
+
+FTP 默认下载路径是 `C:\Users\你的用户名`，我是 `C:\Users\ykla`。
