--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -626,7 +626,7 @@ proftpd@localhost [proftpd]> select * from users;
 
 ## vsftpd
 
-vsftpd 即 Very Secure FTP Daemon（非常安全的 FTP 守护进程）。在 Linux 上比较流行。
+vsftpd 即 Very Secure FTP Daemon（非常安全的 FTP 守护进程）。在 Linux 上比较流行。经过测试在 Windows 上 FTP 客户端中也不会乱码。
 
 ### 安装 vsftpd
 
