--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -622,6 +622,281 @@ proftpd@localhost [proftpd]> select * from users;
 # service proftpd restart # 重启服务
 ```
 
+使用用户 `test`，密码 `FTPpassword_here` 登录 FTP 即可。
+
+## vsftpd
+
+vsftpd 即 Very Secure FTP Daemon（非常安全的 FTP 守护进程）。在 Linux 上比较流行。经过测试在 Windows 上 FTP 客户端中也不会乱码。
+
+### 安装 vsftpd
+
+- 通过 pkg 安装
+
+```sh
+# pkg install vsftpd-ssl pam_pwdfile apache24
+```
+
+| 名称            | 说明         |
+|:-----------------|:----------|
+| vsftpd-ssl      | 带 SSL 支持的 vsftpd-ssl        |
+| pam_pwdfile     | 一个 PAM 模块，允许使用纯文本密码文件进行用户身份验证。 |
+|apache24|提供了 `htpasswd` 命令 |
+
+>**技巧**
+>
+>FreeBSD　系统中的 `/etc/passwd` 仅起到兼容作用，并不实际使用。实际使用的是相关 db 数据库文件。
+
+- 通过 Ports：
+
+```
+# cd /usr/ports/ftp/vsftpd/ && make install clean
+# cd /usr/ports/security/pam_pwdfile/ && make install clean
+# cd /usr/ports/www/apache24 && make install clean
+```
+
+观察安装输出：
+
+```sh
+[2/2] Installing vsftpd-ssl-3.0.5_2...
+===> Creating groups
+Using existing group 'ftp'
+===> Creating users
+Creating user 'ftp' with uid '14'
+===> Creating homedir(s)
+[2/2] Extracting vsftpd-ssl-3.0.5_2: 100%
+```
+
+看到 vsftpd 会创建一个用户叫 `ftp`，查看该用户详情：
+
+```sh
+# id ftp
+uid=14(ftp) gid=14(ftp) groups=14(ftp)
+```
+
+### 创建虚拟用户
+
+```sh
+root@ykla:/home/ykla # adduser
+Username: ftptest
+Full name:
+Uid (Leave empty for default):
+Login group [ftptest]: ftp # 注意此处
+Login group is ftp. Invite ftptest into other groups? []:
+Login class [default]:
+Shell (sh csh tcsh nologin) [sh]: nologin # 注意此处
+Home directory [/home/ftptest]:
+Home directory permissions (Leave empty for default):
+Enable ZFS encryption? (yes/no) [no]:
+Use password-based authentication? [yes]:
+Use an empty password? (yes/no) [no]:
+Use a random password? (yes/no) [no]:
+Enter password: # 注意此处，我设置密码为 z
+Enter password again:
+Lock out the account after creation? [no]:
+Username    : ftptest
+Password    : *****
+Full Name   :
+Uid         : 1003
+ZFS dataset : zroot/home/ftptest
+Class       :
+Groups      : ftp
+Home        : /home/ftptest
+Home Mode   :
+Shell       : /usr/sbin/nologin
+Locked      : no
+OK? (yes/no) [yes]:
+adduser: INFO: Successfully created ZFS dataset (zroot/home/ftptest).
+adduser: INFO: Successfully added (ftptest) to the user database.
+Add another user? (yes/no) [no]:
+Goodbye!
+```
+
+以上：
+
+- 用户名 `ftptest`
+- 密码 `z`
+- 组 `ftp`
+
+###  配置 pam_pwdfile
+
+- 创建文件 `/etc/pam.d/vsftpd`，写入：
+
+
+```ini
+auth required /usr/local/lib/pam_pwdfile.so pwdfile /usr/local/etc/vsftpd_login.db
+account required /usr/lib/pam_permit.so
+```
+
+- 创建密码数据库（我上面添加了用户 `ftptest`，密码是 `z` ）
+
+```sh
+# htpasswd -c -b /usr/local/etc/vsftpd_login.db ftptest z
+Adding password for user virtual
+```
+
+后续再添加（可能需要再 `adduser`，未测试）：
+
+```sh
+# htpasswd -b /usr/local/etc/vsftpd_login.db 新建的用户名 新建的用户密码
+```
+
+
+### 配置 `vsftpd.conf`
+
+vsftpd 主配置数据保存在 `/usr/local/etc/vsftpd.conf`，可直接修改。因为还有个备用的模板在 `/usr/local/etc/vsftpd.conf.sample`。
+
+我们将 `/usr/local/etc/vsftpd.conf` 配置如下：
+
+```ini
+# /usr/local/etc/vsftpd.conf 示例配置文件 
+#
+# 默认编译设置相当保守。此示例文件略微放宽了一些设置，使 FTP 守护进程更实用。
+# 参阅 vsftpd.conf.5 可获取所有默认编译设置。
+#
+# 请注意：此示例文件不是 vsftpd 选项的详尽列表。
+# 请阅读 vsftpd.conf.5 手册页，以全面了解 vsftpd 的功能。
+#
+# 不允许匿名 FTP 吗？
+anonymous_enable=NO
+#
+# 允许本地用户登录。
+local_enable=YES
+#
+# 取消注释以启用任何形式的 FTP 写命令。
+write_enable=YES
+#
+# 本地用户的默认 umask 值为 077。你可能希望将其更改为 022，
+# 如果你的用户期待这样的话（022 是大多数其他 FTP 服务的默认值）
+# local_umask=022
+#
+# 取消注释以允许匿名 FTP 用户上传文件。仅当启用了上面的全局写入功能时，才会生效。
+# 此外，你还需要为 FTP 用户创建一个可写的目录。
+# anon_upload_enable=YES
+#
+# 如果你希望匿名 FTP 用户能够创建新目录，取消注释此项。
+# anon_mkdir_write_enable=YES
+#
+# 启用目录消息 - 在远程用户进入某个目录时，给出相关的消息。
+dirmessage_enable=YES
+#
+# 启用上传/下载日志记录。
+xferlog_enable=YES
+#
+# 确保 PORT 传输连接来自端口 20 (ftp-data)。
+connect_from_port_20=YES
+
+local_root=/home/ftp
+anon_root=/home/ftp
+#
+# 如果需要，你可以安排上传的匿名文件由不同的用户拥有。注意！不建议将上传文件归属于 "root" 用户！
+# chown_uploads=YES
+# chown_username=whoever
+#
+# 你可以覆盖日志文件的存放位置。默认路径如下。
+# xferlog_file=/var/log/vsftpd.log
+#
+# 如果需要，你可以使用标准 ftpd xferlog 格式的日志文件。
+# 注意，在这种情况下，默认的日志文件位置为 /var/log/xferlog。
+# xferlog_std_format=YES
+#
+# 你可以更改超时闲置会话的默认值。单位秒，下同
+idle_session_timeout=1800
+#
+# 你可以更改超时数据连接的默认值。
+data_connection_timeout=1200
+#
+# 建议你在系统上定义一个唯一的用户，供 FTP 服务器使用，作为完全隔离且没有特权的用户。
+# nopriv_user=ftpsecure
+#
+# 启用此选项，服务器将识别异步 ABOR 请求。由于代码较为复杂，安全性方面不推荐启用此项。
+# 如果不启用，某些旧的 FTP 客户端可能会遇到问题。
+# async_abor_enable=YES
+#
+# 在默认情况下，服务器会假装允许 ASCII 模式，但实际上会忽略该请求。
+# 打开以下选项，服务器将在 ASCII 模式下对文件进行 ASCII 格式的修改。
+# 注意：在某些 FTP 服务器中，ASCII 支持允许通过 "SIZE /big/file" 命令在 ASCII 模式下发起拒绝服务攻击（DoS）。vsftpd 已经预测到此攻击并始终保持安全，报告的是原始文件的大小。
+# ASCII 格式修改是该协议的一项糟糕特性。
+# ascii_upload_enable=YES
+# ascii_download_enable=YES
+#
+# 你可以完全自定义登录横幅信息：
+ftpd_banner=Welcome to blah FTP service.
+#
+# 你可以指定一个禁止匿名电子邮件地址的文件。此功能对于防范某些 DoS 攻击可能很有用。
+# deny_email_enable=YES
+# (默认值如下)
+# banned_email_file=/etc/vsftpd.banned_emails
+#
+# 你可以指定一个本地用户的显式列表，将这些用户 chroot() 到他们的主目录。如果 chroot_local_user 为 YES，
+# 则此列表变为不进行 chroot() 操作的用户列表。
+# (警告！chroot() 可能非常危险。如果使用 chroot，请确保用户对 chroot 目录的顶级目录没有写权限)
+# chroot_local_user=NO 即 chroot_list_file 文件中用户将会被限制在其家目录中
+chroot_local_user=NO
+chroot_list_enable=YES
+# (默认值如下)
+chroot_list_file=/usr/local/etc/vsftpd.chroot_list
+allow_writeable_chroot=YES
+#
+# 你可以启用内置 ls 的 "-R" 选项。默认情况下禁用此选项，以避免远程用户在大站点上引起过多 I/O。
+# 然而，一些有缺陷的 FTP 客户端（如 "ncftp" 和 "mirror"）假设存在 "-R" 选项，因此启用它有一定的理由。
+# ls_recurse_enable=YES
+#
+# 当启用 "listen" 指令时，vsftpd 以独立模式运行，并监听 IPv4 套接字。此指令不能与 listen_ipv6 指令同时使用。
+listen=YES
+#
+# 此指令启用监听 IPv6 套接字。如果要同时监听 IPv4 和 IPv6 套接字，则必须使用两个不同的配置文件运行两个 vsftpd 实例。
+# 确保其中一个 listen 选项被注释掉！！
+# listen_ipv6=YES
+
+# 此选项应该是一个空目录的路径。
+# 此目录不应可写给 FTP 用户。该目录在 vsftpd 不需要文件系统访问时用作安全的 chroot() 监狱。
+secure_chroot_dir=/usr/local/share/vsftpd/empty
+
+# 如果启用后台模式，此选项才有效。
+# 它会将运行中的守护进程的 PID 写入指定路径的文件中。
+# 默认情况下不创建 PID 文件。
+# pid_file=/var/run/vsftpd.pid
+
+# 如果在独立模式下使用 vsftpd，请取消注释下面两行：
+listen=YES
+background=YES
+
+# 使用本地时间
+use_localtime=YES
+```
+
+官网文档在此 [VSFTPD.CONF](https://security.appspot.com/vsftpd/vsftpd_conf.html)，中文翻译在金步国的 [vsftpd.conf 中文版](https://www.jinbuguo.com/vsftpd/vsftpd.conf.html)。
+
+### `vsftpd.chroot_list`
+
+创建并编辑`/usr/local/etc/vsftpd.chroot_list`，加入用户 `ftptest`
+
+
+### 创建路径
+
+```sh
+# mkdir -p /home/ftp
+# chown -R ftp:ftp /home/ftp
+# chmod -R 775 /home/ftp
+```
+
+### 服务管理
+
+```sh
+# service vsftpd enable  # 添加服务
+# service vsftpd start   # 开始服务
+# service vsftpd stop    # 停止服务
+# service vsftpd restart # 重启服务
+```
+
+- 使用用户 `ftptest`，密码 `z` 登录 FTP 即可。
+
+- vsftpd 日志在 `/var/log/vsftpd.log`
+
+### 参考文献
+
+- [How to set up vsftpd on FreeBSD 12?](https://www.osradar.com/how-to-set-up-vsftpd-on-freebsd-12/)，其修改自 [Installing and configuring vsftpd on FreeBSD](https://dnaeon.github.io/installing-and-configuring-vsftpd-on-freebsd/)。本文框架基于此。
+
 ## 连接到 FTP 服务器
 
 简单示例：
@@ -646,30 +921,6 @@ quit
 ftp [选项] [IP 地址]
 ```
 
-实例:
-
-```batch
-PS C:\Users\ykla> ftp 192.168.179.150
-连接到 192.168.179.150。
-220 FTP Server ready
-200 UTF8 set to on
-用户(192.168.179.150:(none)): test
-331 Password required for test
-密码:
-
-230-Total logins: 10
-230 User test logged in
-ftp> ls
-200 PORT command successful
-150 Opening ASCII mode data connection for file list
-FreeBSD Journal 2015.11-12.pdf
-哲学史期末.pdf
-226 Transfer complete
-ftp: 收到 56 字节，用时 0.00秒 56.00千字节/秒。
-ftp> bye
-221 Goodbye.
-ftp>
-```
 ---
 
 FTP 命令：
@@ -677,17 +928,13 @@ FTP 命令：
 ```sh
 account [密码] 提交补充密码
 
-append [本地文件] [远程文件] 以 本地文件 为文件名向服务器上传本地文件本地文件
-
-ascii 将 FTP 文件传送类型设置为 ASCII 模式
+put 上传
 
 bell 在文件传送完后发出提示音
 
 dir/ls 显示该目录下的文件及文件夹
 
 cd 切换目录
-
-cdup 返回父目录
 
 delete 删除文件
 
@@ -697,3 +944,70 @@ get 远程文件 下载服务器上的远程文件
 
 bye 结束与服务器的会话
 ```
+
+实例:
+
+```powershell
+PS C:\Users\ykla> ftp 192.168.179.150
+连接到 192.168.179.150。
+220 Welcome to blah FTP service.
+200 Always in UTF8 mode.
+用户(192.168.179.150:(none)): ftptest
+331 Please specify the password.
+密码:
+
+230 Login successful.
+ftp> ls
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东方工作室译).pdf
+哲学史期末.docx
+马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 288 字节，用时 0.00秒 96.00千字节/秒。
+ftp> delete 哲学史期末.docx
+250 Delete operation successful.
+ftp> dir
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+-rw-------    1 1003     14       147170778 Mar 06 15:39 FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+-rw-------    1 1003     14       47037557 Mar 06 15:39 FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东 方工作室译).pdf
+-rw-------    1 1003     14         591146 Oct 20 11:28 马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 435 字节，用时 0.01秒 54.38千字节/秒。
+ftp> get 马克思主义哲学原理.doc
+200 PORT command successful. Consider using PASV.
+150 Opening BINARY mode data connection for 马克思主义哲学原理.doc (591146 bytes).
+226 Transfer complete.
+ftp: 收到 591146 字节，用时 0.01秒 42224.71千字节/秒。
+ftp> ls
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东方工作室译).pdf
+马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 266 字节，用时 0.00秒 66.50千字节/秒。
+ftp> lcd
+目前的本地目录 C:\Users\ykla。
+ftp> put UOS使用打印机.pdf
+200 PORT command successful. Consider using PASV.
+150 Ok to send data.
+226 Transfer complete.
+ftp: 发送 1269989 字节，用时 0.04秒 36285.40千字节/秒。
+ftp> dir
+200 PORT command successful. Consider using PASV.
+150 Here comes the directory listing.
+-rw-------    1 1003     14       147170778 Mar 06 15:39 FreeBSD完全攻略QA版 (冯宝坤，陈子鸿编著, 冯宝坤, 陈子鸿编著, 冯宝坤, 陈子鸿).pdf
+-rw-------    1 1003     14       47037557 Mar 06 15:39 FreeBSD技术内幕 ((美) Michael Urban，(美)Brian Tiemann著 智慧东 方工作室译).pdf
+-rw-------    1 1003     14        1269989 Mar 27 15:13 UOS使用打印机.pdf
+-rw-------    1 1003     14         591146 Oct 20 11:28 马克思主义哲学原理.doc
+226 Directory send OK.
+ftp: 收到 515 字节，用时 0.01秒 46.82千字节/秒。
+ftp> bye
+221 Goodbye.
+PS C:\Users\ykla>
+```
+
+FTP 默认下载路径是 `C:\Users\你的用户名`，我是 `C:\Users\ykla`。
