--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -15,7 +15,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 ---
 
-Pure-FTPd 使用命令行测试（FreeBSD 中）、WinSCP 等客户端下并不存在乱码问题。
+使用命令行（FreeBSD 中）、WinSCP 等客户端测试 Pure-FTPd 并不存在乱码问题。
 
 ### 安装
 
