--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -6,9 +6,9 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 > **警告**
 >
-> Pure-FTPD 已经移除了对 RFC 2640 的支持，所以 Windows 下使用 ftp 命令行处理 FTP 非英文相关文件会乱码，且无法修改编码。见 <https://www.pureftpd.org/project/pure-ftpd/news/>：
+> Pure-FTPD 已经移除了对 RFC 2640 的支持，所以 Windows 下使用 ftp 命令行处理 FTP 非英文相关文件会乱码，且无法修改编码。见 <https://www.pureftpd.org/project/pure-ftpd/news/>。
 > 
-> ```batch
+> ```powershell
 > ftp> quote opts utf8 on
 >504 Unknown command
 >```
