--- a/di-23-zhang-netbsd/di-23.1-jie-gai-shu.md
+++ b/di-23-zhang-netbsd/di-23.1-jie-gai-shu.md
@@ -8,4 +8,7 @@ NetBSD 有 Linux 兼容层。
 
 驱动方面自带了 i915 显卡及 AMD 相关驱动，支持 UEFI NVMe。
 
-如果您想捐赠 NetBSD：[Donate using Stripe](https://www.netbsd.org/stripe.html)，支持中国银联、Google Pay 等多种支付方式。
+如果您想捐赠 NetBSD：
+
+- 最简单的方式是使用 Github Sponsors：<https://github.com/sponsors/netbsd>
+- [Donate using Stripe](https://www.netbsd.org/stripe.html)，支持中国银联、Google Pay 等多种支付方式。
