--- a/di-23-zhang-netbsd/di-23.1-jie-gai-shu.md
+++ b/di-23-zhang-netbsd/di-23.1-jie-gai-shu.md
@@ -10,5 +10,5 @@ NetBSD 有 Linux 兼容层。
 
 如果您想捐赠 NetBSD：
 
-- 最简单的方式是使用 Github Sponsors：<https://github.com/sponsors/netbsd>
+- 最简单的方式是使用 Github Sponsors：<https://github.com/sponsors/netbsd> ~~还能刷个 Github 徽章 Public Sponsor 出来~~
 - [Donate using Stripe](https://www.netbsd.org/stripe.html)，支持中国银联、Google Pay 等多种支付方式。
