--- a/di-16-zhang-fu-wu-qi/di-16.2-jie-minio-dui-xiang-cun-chu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.2-jie-minio-dui-xiang-cun-chu-fu-wu.md
@@ -54,7 +54,7 @@ MinIO 会启动两个服务端口，分别是 `address` 和 `console_address`。
 # service minio start
 ```
 
-启动完成后访问地址为 `IP:9100` 比如：<http://localhost:9100>。
+启动完成后访问地址为 `IP:9100` 比如：`http://localhost:9100`。
 
 ![minio 登录界面](../.gitbook/assets/minio1.png)
 
