--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -163,7 +163,7 @@ mydb
 
 ### 登录 grafana
 
-默认的登录地址为：<http://localhost:3000>，
+默认的登录地址为：`http://localhost:3000`，
 
 ![](../.gitbook/assets/grafana1.png)
 
