--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -122,7 +122,7 @@ musicpd 配置文件为 `/usr/local/etc/musicpd.conf` 。
 
 里面默认的一些目录为
 
-```conf
+```ini
 /var--> mpd --
                |-> music
                |-> .mpd --> playlists
@@ -141,7 +141,7 @@ musicpd 配置文件为 `/usr/local/etc/musicpd.conf` 。
 
 修改 `/usr/local/etc/musicpd.conf` ，"Default OSS Device" 一节后面增加一节：
 
-```conf
+```ini
 audio_output {
         type            "oss"
         name            "OSS Device（dop mode）"
