--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -8,7 +8,7 @@
 >
 > ——Linus Torvalds
 
-FreeBSD 新型终端 VT，是原生支持 cjk 的，所以放个字体进去，即可显示中文。
+FreeBSD 新型终端 VT，是原生支持 CJK 的，所以放个字体进去，即可显示中文。
 
 本说明以 FreeBSD 14.2 RELEASE 为例。
 
