--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -8,18 +8,20 @@
 >
 > ——Linus Torvalds
 
-FreeBSD 新型终端 VT，是原生支持 CJK 的，所以放个字体进去，即可显示中文。
+FreeBSD 新型终端 VT，原生支持 CJK，所以放入字体，即可显示中文。
 
-本说明以 FreeBSD 14.2 RELEASE 为例。
+本文基于 FreeBSD 14.2 RELEASE。
 
-字体格式为 `.fnt`
-
-命令：`$ vidcontrol -f ABC.fnt`
-
-FreeBSD 基本系统提供了一个工具，可用于将 bdf、hex 转换为 fnt
+字体格式为 `.fnt`（并不是码表 + PNG 图片，而是二进制字体文件），命令：
 
 ```sh
-vtfontcvt [ -h 高度 ] [ -v ] [ -w 宽度] [字体]
+$ vidcontrol -f test.fnt
+```
+
+FreeBSD 基本系统提供了一款工具，可用于将 bdf、hex 转换为 fnt：
+
+```sh
+$ vtfontcvt [ -h 高度 ] [ -v ] [ -w 宽度] [字体路径]
 ```
 
 - 示例：
@@ -32,6 +34,9 @@ $ fetch https://people.freebsd.org/~emaste/newcons/b16.fnt
 $ vidcontrol -f b16.fnt
 ```
 
+>**技巧**
+>
+>若上述链接失效，请访问 <https://github.com/FreeBSD-Ask/fnt-fonts>
 
 ![设置完成后的 tty](../.gitbook/assets/tty1.png)
 
@@ -50,4 +55,4 @@ allscreens_flags="-f /root/b16.fnt"
 - [rc.conf](https://man.freebsd.org/cgi/man.cgi?query=rc.conf&sektion=5)，此页搜索“allscreens_flags”
 - [vidcontrol font and color via /etc/rc.conf problem](https://forums.freebsd.org/threads/vidcontrol-font-and-color-via-etc-rc-conf-problem.81696/)
 - [Custom cjktty patches](https://github.com/zhmars/cjktty-patches)，Linux 中文 tty 内核补丁，作者似乎已经放弃维护了
-- [Internationalizing the Kernel](https://www.linuxjournal.com/content/internationalizing-kernel)，linus 言论出处
+- [Internationalizing the Kernel](https://www.linuxjournal.com/content/internationalizing-kernel)，Linus 言论出处
