--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -48,7 +48,7 @@ allscreens_flags="-f /root/b16.fnt"
 
 ## 故障排除
 
-- 不知道如何手动生成中文字体的 fnt 文件。<https://github.com/usonianhorizon/vt-fnt> 方法看不懂。
+- 不知道如何手动生成中文字体的 fnt 文件。<https://github.com/usonianhorizon/vt-fnt> 方法看不懂，可以生成 bdf 文件，但是报错和他文中一样。
 
 ## 参考文献
 
