故障排除——>故障排除与未竟事宜

--- a/di-10-zhang-xu-ni-hua/di-10.1.md
+++ b/di-10-zhang-xu-ni-hua/di-10.1.md
@@ -178,7 +178,7 @@ root@ykla:/home/ykla # mv ubuntu-24.04.1-desktop-amd64.iso /vms/iso_images
 
 ![](../.gitbook/assets/BVCP32.png)
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - 不知道怎么卸载
 
