--- a/di-10-zhang-xu-ni-hua/di-10.2-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.2-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -294,7 +294,7 @@ Starting winguest
 
 ![](../.gitbook/assets/win22.png)
 
-### 故障排除
+### 故障排除与未竟事宜
 
 有问题先重启一遍自己的物理机。还有问题自己 `ifconfig` 对比上文看看是不是有了多余的网卡，将其销毁掉。
 
