--- a/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.1-jie-tcp-bbr.md
@@ -36,8 +36,8 @@ TCP BBR 是 Google 开发的一种拥塞控制算法。作用有两个：
 如果输出结果为 `net.inet.tcp.functions_default: bbr`，则 TCP BBR 启用成功。
 
 
-## 故障排除
+## 故障排除与未竟事宜
 
-故障排除等事宜请参考：
+故障排除与未竟事宜等事宜请参考：
 
 [netflix/tcplog_dumper](https://github.com/netflix/tcplog_dumper)
