--- a/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
@@ -168,7 +168,7 @@ psk="WIFI 密码"
 # /etc/rc.d/netif start  wlan0
 ```
 
-故障排除：[wiki/WiFi/Iwlwifi](https://wiki.freebsd.org/WiFi/Iwlwifi)
+故障排除与未竟事宜：[wiki/WiFi/Iwlwifi](https://wiki.freebsd.org/WiFi/Iwlwifi)
 
 ## 博通（broadcom）网卡驱动
 
