--- a/di-14-zhang-wang-luo-guan-li/di-14.4-jie-lan-ya.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.4-jie-lan-ya.md
@@ -43,7 +43,7 @@ This device provides human interface device services.
 Set it up? [yes]:
 ```
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - logitech m337 配对连接后会自动断开。
 
