--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -341,7 +341,7 @@ root@localhost [pureftpd]> select * from users;
 
 - [Virtual Hosting With PureFTPd And MySQL](http://km.npru.ac.th/userfiles/R013/km_articles_files/20120227104346_Virtual%20Hosting%20With%20PureFTPd%20And%20MySQL.pdf)，本文框架基于此
 
-### 故障排除
+### 故障排除与未竟事宜
 
 - Pure-FTPd 日志在 `/var/log/messages`。
 
