--- a/di-16-zhang-fu-wu-qi/di-16.2-jie-minio-dui-xiang-cun-chu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.2-jie-minio-dui-xiang-cun-chu-fu-wu.md
@@ -65,7 +65,7 @@ MinIO 会启动两个服务端口，分别是 `address` 和 `console_address`。
 
 ![minio 主界面](../.gitbook/assets/minio2.png)
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - 不支持中文
 
