--- a/di-16-zhang-fu-wu-qi/di-16.3-jie-nodejs-xiang-guan.md
+++ b/di-16-zhang-fu-wu-qi/di-16.3-jie-nodejs-xiang-guan.md
@@ -41,7 +41,7 @@ pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.xxx`，即某个特定
 
 这就是原来的淘宝镜像站。见 <https://npmmirror.com>。
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - 如果你跳过了 FreeBSD 基本系统的更新而直接安装软件，那么在 FreeBSD 上，你将有可能遇到以下错误：
 
