--- a/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
+++ b/di-16-zhang-fu-wu-qi/di-16.5-jie-wildfly.md
@@ -35,6 +35,6 @@
 >
 > 还可以用 `/usr/local/wildfly26/bin/add-user.sh` 生成管理员账户，
 
-## 故障排除
+## 故障排除与未竟事宜
 
 如果服务无法正常启动，可以通过 `/usr/local/wildfly26/standalone/log/server.log` 查看错误日志。
