--- a/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.14.md
@@ -369,6 +369,6 @@ nginx: configuration file /usr/local/etc/nginx/nginx.conf test is successful
 
 - [How to allow Private IP to access onlyOffice documentServer?](https://forum.onlyoffice.com/t/how-to-allow-private-ip-to-access-onlyoffice-documentserver/5755/2)
 
-## 故障排除
+## 故障排除与未竟事宜
 
 可以看日志 `cat /var/log/onlyoffice/documentserver/converter/out.log`。
