--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -233,7 +233,7 @@ Home——> Administration——> General——> Default preferences——> Lang
 
 ![](../.gitbook/assets/grafana4.png)
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - 内核、网络、CPU 相关信息均不显示。似乎和 Proc 有关。
 
