--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.2-jie-xi-tong-an-zhuang.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.2-jie-xi-tong-an-zhuang.md
@@ -158,7 +158,7 @@ ykla@ykla:~ $ gpart show
 --------------------------------------------------------------
 ```
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - `newfs_msdos /dev/gpt/efiboot0:operation not permitted`
 
