--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -377,7 +377,7 @@ echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian 12 bookwor
 # xhost +local：#此时处于 FreeBSD 系统！
 ```
 
-## 故障排除
+## 故障排除与未竟事宜
 
 ### 不知道程序的命令行启动命令是什么？
 
