--- a/di-21-zhang-linux-jian-rong-ceng/di-21.6-jie-linux-jian-rong-ceng-ji-yu-opensuse.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.6-jie-linux-jian-rong-ceng-ji-yu-opensuse.md
@@ -282,7 +282,7 @@ case $answer in
 esac
 ```
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - 当使用 LXC Leap 镜像时，zypper 是不可用的。同样地，当使用 openSUSE Tumbleweed 时，dnf 和 zypper 都不可用。该问题不影响我们的 leap 脚本，但是影响第二个风滚草的脚步，导致无法正常使用。已经报告 [Bug](https://bugzilla.opensuse.org/show_bug.cgi?id=1213158)。
 
