--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -254,7 +254,7 @@ entry Help -> Edit Custom Properties...
 
 社区版是正常的，但是很久没有更新了。还是 2020.2。
 
-### 故障排除
+### 故障排除与未竟事宜
 
 - 提示“the file in the editor is not runnable”，待解决
   
