--- a/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/di-12.3-jie-freebsd-zhong-wen-tty-kong-zhi-tai.md
@@ -46,7 +46,7 @@ $ vidcontrol -f b16.fnt
 allscreens_flags="-f /root/b16.fnt"
 ```
 
-## 故障排除
+## 故障排除与未竟事宜
 
 - 不知道如何手动生成中文字体的 fnt 文件。<https://github.com/usonianhorizon/vt-fnt> 方法看不懂，可以生成 bdf 文件，但是报错和他文中一样。里面提到的软件 FontForge  有 Windows 版本，下载路径在 <https://fontforge.org/en-US/downloads/windows-dl/>。
 
