--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -19,28 +19,90 @@
 
 ## 本地视频播放器
 
-- VLC：
+### VLC
 
+#### 安装 VLC
 
+- 使用 pkg 安装：
+  
 ```sh
 # pkg install vlc
 ```
 
-或者：
+- 或者使用 Ports：
 
 ```sh
 # cd /usr/ports/multimedia/vlc/ 
 # make install clean
 ```
 
+#### VLC 视频播放测试
+
+- 视频 A：
+
+有黑边、画面撕裂。
+
+- 视频 B：
+
+有黑边。
+
+### SMPlayer
+
+SMPlayer 是 MPlayer（纯命令行）的 QT 前端。
+
+#### 安装 SMPlayer
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install smplayer
+```
+
+- 或者使用 Ports：
+
+```sh
+# cd /usr/ports/multimedia/smplayer/ 
+# make install clean
+```
+
+#### SMPlayer 视频播放测试
+
+- 视频 A：
+
+- 视频 B：
+
+### Kodi
+
+Kodi 曾用名为 XBMC。
+
+#### 安装 Kodi 
+
+- 使用 pkg 安装：
+  
+```
+# pkg install kodi
+```
+
+- 或者使用 Ports：
+  
+```sh
+# cd /usr/ports/multimedia/kodi/ 
+# make install clean
+```
+
+#### Kodi  视频播放测试
+
+- 视频 A：
+
+- 视频 B：
 
 ## 用 MPD 播放 DSD
 
-Music Player Daemon (MPD) 是一个灵活、强大且可扩展的音乐播放器系统，它可以在计算机上运行，并通过各种客户端进行控制。MPD 的主要功能包括：支持各种音频格式，客户端 - 服务器架构，播放列表管理，支持流媒体，跨平台支持等。
+Music Player Daemon (MPD) 是一款灵活、强大且可扩展的音乐播放器系统，它可以在计算机上运行，并通过各种客户端进行控制。MPD 的主要功能包括：支持各种音频格式，客户端 - 服务器架构，播放列表管理，支持流媒体，跨平台支持等。
 
 ### 准备
 
-支持 DSD 的声卡或 DAC，一个 DSD 音频文件。
+支持 DSD 的声卡或 DAC，一段 DSD 音频文件。
 
 以下基于 FreeBSD 14.0，外置 DAC 使用海贝 R3（声卡设置基本类似），使用 oss 驱动。
 
