--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -38,17 +38,15 @@
 
 #### VLC 视频播放测试
 
-- 视频 A：
+视频 A、B 均正常
 
-有黑边、画面撕裂。
+![](../.gitbook/assets/vlc1.png)
 
-- 视频 B：
-
-有黑边。
+![](../.gitbook/assets/vlc2.png)
 
 ### SMPlayer
 
-SMPlayer 是 MPlayer（纯命令行）的 QT 前端。
+SMPlayer 是 MPlayer（纯命令行）的 QT 前端。推荐使用。
 
 #### 安装 SMPlayer
 
@@ -67,9 +65,13 @@ SMPlayer 是 MPlayer（纯命令行）的 QT 前端。
 
 #### SMPlayer 视频播放测试
 
-- 视频 A：
+视频 A、B 均正常
 
-- 视频 B：
+![SMPlayers](../.gitbook/assets/smplayer1.png)
+
+![SMPlayer](../.gitbook/assets/smplayer2.png)
+
+![SMPlayer](../.gitbook/assets/smplayer3.png)
 
 ### Kodi
 
@@ -90,11 +92,29 @@ Kodi 曾用名为 XBMC。
 # make install clean
 ```
 
-#### Kodi  视频播放测试
+#### Kodi 设置中文
 
-- 视频 A：
+打开 `interface`（界面）
 
-- 视频 B：
+![](../.gitbook/assets/kodi1.png)
+
+点击 `Skin`（皮肤）。再点击左下角，把 `basic`（简单）改为 `expert`（专家）或 `Standard`（标准），否则你看不到 `fonts` 等选项！然后将 `fonts`（字体）改为 `Arial based`，否则中文会乱码！
+
+![](../.gitbook/assets/kodi3.png)
+
+返回，选择 `Regional`（区域）——> `Language`（语言）——> `Chinese (Simple)`（简体中文）。
+
+![](../.gitbook/assets/kodi2.png)
+
+中文设置完毕：
+
+![](../.gitbook/assets/kodi5.png)
+
+#### Kodi 视频播放测试
+
+视频 A、B 均正常
+
+![](../.gitbook/assets/kodi4.png)
 
 ## 用 MPD 播放 DSD
 
