尝试播放电视剧《人民公仆》  尝试播放动漫《败犬女主太多了！》 (#240)
* Update di-20.2-jie-yin-shi-pin-bo-fang-qi.md

* Update di-4.23-jie-yuan-cheng-zhuo-mian-guan-li.md

* Update di-4.1-jie-an-zhuang-xian-ka-qu-dong-ji-xorg-bi-kan.md

* Update di-4.1-jie-an-zhuang-xian-ka-qu-dong-ji-xorg-bi-kan.md

* Update di-4.23-jie-yuan-cheng-zhuo-mian-guan-li.md

* Update di-4.23-jie-yuan-cheng-zhuo-mian-guan-li.md

* 补图

* Update di-20.2-jie-yin-shi-pin-bo-fang-qi.md

* Update README.md

--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -19,28 +19,110 @@
 
 ## 本地视频播放器
 
-- VLC：
+### VLC
 
+#### 安装 VLC
 
+- 使用 pkg 安装：
+  
 ```sh
 # pkg install vlc
 ```
 
-或者：
+- 或者使用 Ports：
 
 ```sh
 # cd /usr/ports/multimedia/vlc/ 
 # make install clean
 ```
 
+#### VLC 视频播放测试
+
+视频 A、B 均正常
+
+![](../.gitbook/assets/vlc1.png)
+
+![](../.gitbook/assets/vlc2.png)
+
+### SMPlayer
+
+SMPlayer 是 MPlayer（纯命令行）的 QT 前端。推荐使用。
+
+#### 安装 SMPlayer
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install smplayer
+```
+
+- 或者使用 Ports：
+
+```sh
+# cd /usr/ports/multimedia/smplayer/ 
+# make install clean
+```
+
+#### SMPlayer 视频播放测试
+
+视频 A、B 均正常
+
+![SMPlayers](../.gitbook/assets/smplayer1.png)
+
+![SMPlayer](../.gitbook/assets/smplayer2.png)
+
+![SMPlayer](../.gitbook/assets/smplayer3.png)
+
+### Kodi
+
+Kodi 曾用名为 XBMC。
+
+#### 安装 Kodi 
+
+- 使用 pkg 安装：
+  
+```
+# pkg install kodi
+```
+
+- 或者使用 Ports：
+  
+```sh
+# cd /usr/ports/multimedia/kodi/ 
+# make install clean
+```
+
+#### Kodi 设置中文
+
+打开 `interface`（界面）
+
+![](../.gitbook/assets/kodi1.png)
+
+点击 `Skin`（皮肤）。再点击左下角，把 `basic`（简单）改为 `expert`（专家）或 `Standard`（标准），否则你看不到 `fonts` 等选项！然后将 `fonts`（字体）改为 `Arial based`，否则中文会乱码！
+
+![](../.gitbook/assets/kodi3.png)
+
+返回，选择 `Regional`（区域）——> `Language`（语言）——> `Chinese (Simple)`（简体中文）。
+
+![](../.gitbook/assets/kodi2.png)
+
+中文设置完毕：
+
+![](../.gitbook/assets/kodi5.png)
+
+#### Kodi 视频播放测试
+
+视频 A、B 均正常
+
+![](../.gitbook/assets/kodi4.png)
 
 ## 用 MPD 播放 DSD
 
-Music Player Daemon (MPD) 是一个灵活、强大且可扩展的音乐播放器系统，它可以在计算机上运行，并通过各种客户端进行控制。MPD 的主要功能包括：支持各种音频格式，客户端 - 服务器架构，播放列表管理，支持流媒体，跨平台支持等。
+Music Player Daemon (MPD) 是一款灵活、强大且可扩展的音乐播放器系统，它可以在计算机上运行，并通过各种客户端进行控制。MPD 的主要功能包括：支持各种音频格式，客户端 - 服务器架构，播放列表管理，支持流媒体，跨平台支持等。
 
 ### 准备
 
-支持 DSD 的声卡或 DAC，一个 DSD 音频文件。
+支持 DSD 的声卡或 DAC，一段 DSD 音频文件。
 
 以下基于 FreeBSD 14.0，外置 DAC 使用海贝 R3（声卡设置基本类似），使用 oss 驱动。
 
