将“第 20.2 节 音视频播放器与剪辑”拆分为“第 20.2 节 音频播放器”、“第 20.3 节 视频播放器 & 剪辑”

--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-pin-bo-fang-qi.md
@@ -1,120 +1,21 @@
-# 第 20.2 节 音视频播放器
+# 第 20.2 节 音频播放器
 
-## 本地音乐播放器
+## Audacious
 
-- Audacious:
 
-安装：
+- 使用 pkg 安装：
 
 ```sh
 # pkg install audacious
 ```
 
-或者
+- 或者使用 Ports 安装：
 
 ```sh
 # cd /usr/ports/multimedia/audacious/ 
 # make install clean
 ```
 
-## 本地视频播放器
-
-### VLC
-
-#### 安装 VLC
-
-- 使用 pkg 安装：
-  
-```sh
-# pkg install vlc
-```
-
-- 或者使用 Ports：
-
-```sh
-# cd /usr/ports/multimedia/vlc/ 
-# make install clean
-```
-
-#### VLC 视频播放测试
-
-视频 A、B 均正常
-
-![](../.gitbook/assets/vlc1.png)
-
-![](../.gitbook/assets/vlc2.png)
-
-### SMPlayer
-
-SMPlayer 是 MPlayer（纯命令行）的 QT 前端。推荐使用。
-
-#### 安装 SMPlayer
-
-- 使用 pkg 安装：
-
-```sh
-# pkg install smplayer
-```
-
-- 或者使用 Ports：
-
-```sh
-# cd /usr/ports/multimedia/smplayer/ 
-# make install clean
-```
-
-#### SMPlayer 视频播放测试
-
-视频 A、B 均正常
-
-![SMPlayers](../.gitbook/assets/smplayer1.png)
-
-![SMPlayer](../.gitbook/assets/smplayer2.png)
-
-![SMPlayer](../.gitbook/assets/smplayer3.png)
-
-### Kodi
-
-Kodi 曾用名为 XBMC。
-
-#### 安装 Kodi 
-
-- 使用 pkg 安装：
-  
-```
-# pkg install kodi
-```
-
-- 或者使用 Ports：
-  
-```sh
-# cd /usr/ports/multimedia/kodi/ 
-# make install clean
-```
-
-#### Kodi 设置中文
-
-打开 `interface`（界面）
-
-![](../.gitbook/assets/kodi1.png)
-
-点击 `Skin`（皮肤）。再点击左下角，把 `basic`（简单）改为 `expert`（专家）或 `Standard`（标准），否则你看不到 `fonts` 等选项！然后将 `fonts`（字体）改为 `Arial based`，否则中文会乱码！
-
-![](../.gitbook/assets/kodi3.png)
-
-返回，选择 `Regional`（区域）——> `Language`（语言）——> `Chinese (Simple)`（简体中文）。
-
-![](../.gitbook/assets/kodi2.png)
-
-中文设置完毕：
-
-![](../.gitbook/assets/kodi5.png)
-
-#### Kodi 视频播放测试
-
-视频 A、B 均正常
-
-![](../.gitbook/assets/kodi4.png)
 
 ## 用 MPD 播放 DSD
 
@@ -267,9 +168,8 @@ pc 端 GUI 建议使用 cantata (`pkg install cantata`)
 # make install clean
 ```
 
-## 视频剪辑
 
-### 扣图
+## 扣图
 
 Unix 系统下相关软件有很多，这里我们简单介绍一下矢量制图程序 **Inkscape** 的使用方法
 
@@ -295,41 +195,4 @@ Unix 系统下相关软件有很多，这里我们简单介绍一下矢量制图
 
 想了解更多，可查阅 Inscape [官方教程](https://inkscape.org/zh-hans/learn/tutorials/)
 
-### 视频剪辑
 
-- Olive 视频编辑器：
-
-安装：
-
-```sh
-# pkg install olive-video-editor
-```
-
-或者：
-
-```sh
-# cd /usr/ports/multimedia/olive/ 
-# make install clean
-```
-
-
-## 压缩字幕
-
-- ffmpeg :
-
-```
-# pkg install ffmpeg
-```
-
-或者：
-
-```sh
-# cd /usr/ports/multimedia/ffmpeg/ 
-# make install clean
-```
-
-处理：
-
-```sh
-$ ffmpeg -i 视频文件.mp4 -vf subtitles=对应字幕.ass 输出视频.mp4
-```
