--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-shi-pin-bo-fang.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.3-shi-pin-bo-fang.md
@@ -136,3 +136,37 @@ Kodi 曾用名为 XBMC。
 ```sh
 $ ffmpeg -i 视频文件.mp4 -vf subtitles=对应字幕.ass 输出视频.mp4
 ```
+
+## 扣图
+
+Unix 系统下相关软件有很多，这里我们简单介绍一下矢量制图程序 **Inkscape** 的使用方法
+
+### 安装 inkscape
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install inkscape
+```
+
+- 或者使用 Ports 安装：
+
+```sh
+# cd /usr/ports/graphics/inkscape/ 
+# make install clean
+```
+
+### inkscape 用法
+
+1. `Ctrl O`（字母 `o`）打开图片
+2. 点击图片
+3. `Alt i` 改为矢量模式
+4. `Shift F6` 贝塞尔和直线模式
+5. `Ctrl A` 全选
+6. 选择 **路径** --> **交集**，实现扣图
+
+### 参考文献
+
+- Inscape [官方教程](https://inkscape.org/zh-hans/learn/tutorials/)
+
+
