--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.4-jian-ji.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.4-jian-ji.md
@@ -1,5 +1,22 @@
 # 第 20.4 节 音视频剪辑与图像处理
 
+## 音频剪辑
+
+- Audacity :
+
+安装：
+
+```sh
+# pkg install audacity
+```
+
+或者
+
+```sh
+# cd /usr/ports/audio/audacity/ 
+# make install clean
+```
+
 
 ## 视频剪辑
 
